k8s/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infobuddy-client
  namespace: infobuddy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: infobuddy-client
  template:
    metadata:
      labels:
        app: infobuddy-client
    spec:
      containers:
        - name: client
          image: jitennn07/infobuddy-client-k8s:v1 # placeholder
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 8
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: "1"
              memory: 512Mi
