k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infobuddy-ingress
  namespace: infobuddy
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-buffering: "off" # important for SSE
spec:
  ingressClassName: nginx
  rules:
    - host: infobuddy.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: infobuddy-client
                port:
                  number: 3000
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: infobuddy-server
                port:
                  number: 8000
